# dataclaw

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Ground Foundry Seed Memo.docx  MANIFEST.in  Makefile  README.md  cline_log.md  pyinstaller.spec  pyproject.toml  rename-refinery-plan.md  score_traces.md
.claude/plans/: stateless-wobbling-muffin.md
.claude/skills/dataclaw/: SKILL.md
.claude/skills/dataclaw-score/: SKILL.md
.github/workflows/: publish.yml  release.yml  test.yml
app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  styles.css
app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: dataclaw.rs  hf.rs  lib.rs  logs.rs  main.rs  scheduler.rs  startup.rs  tray.rs  updater.rs
app/src-tauri/tests/: capabilities.rs  updater_signature.rs
app/src/components/: UpdateChecker.tsx
app/src/lib/: ipc.ts  types.ts
app/src/routes/: Auth.tsx  Config.tsx  Dashboard.tsx  Logs.tsx
dataclaw/: __init__.py  _json.py  anonymizer.py  auth.py  badges.py  cli.py  config.py  daemon.py  index.py  jsonl_tools.py  logging.py  parser.py  privacy_filter.py  providers.py  scheduler.py  search.py  secrets.py
dataclaw/_cli/: commands.py  common.py  exporting.py  review.py
dataclaw/parsers/: claude.py  codex.py  common.py  cursor.py  custom.py  gemini.py  hermes.py  kimi.py  openclaw.py  opencode.py
dataclaw/web/frontend/: package-lock.json  vite.config.ts
dataclaw/web/frontend/src/: App.tsx  api.ts  index.css  types.ts
dataclaw/web/frontend/src/components/: BadgeChip.tsx  FilterBar.tsx  TraceCard.tsx
dataclaw/web/frontend/src/views/: Bundles.tsx  Dashboard.tsx  Inbox.tsx  Policies.tsx  Search.tsx  SessionDetail.tsx
docs/: RELEASING.md  SKILL.md  claude-code-vs-cchv-gaps.md  codex-vs-cchv-gaps.md  expansion-design.md  gemini-vs-cchv-gaps.md  ground-foundry-scientist-workbench.md  hermes-provider-notes.md  reliability-merge-and-privacy-filter-plan.md  workbench-progress.md
scripts/: build-latest-json.sh  build-sidecar.sh  release.py  sidecar_main.py  sync_version.py
tests/: __init__.py  cli_helpers.py  conftest.py  parser_helpers.py  test_anonymizer.py  test_auth.py  test_badges.py  test_cli.py  test_cli_common.py  test_cli_exporting.py  test_cli_facade.py  test_cli_review.py  test_config.py  test_daemon.py  test_hermes_parser.py  test_index.py  test_jsonl_merge.py  test_jsonl_tools.py  test_logging.py  test_parser.py  test_parser_claude.py  test_parser_codex.py  test_parser_common.py  test_parser_cursor.py  test_parser_custom.py  test_parser_gemini.py  test_parser_openclaw.py  test_parser_opencode.py  test_privacy_filter.py  test_providers.py  test_release_workflow.py  test_scheduler.py  test_secrets.py
