[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dataclaw"
version = "0.5.1"
description = "Export your coding agent conversations to Hugging Face as structured data"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    {name = "Banodoco"},
]
keywords = ["claude-code", "codex", "gemini-cli", "opencode", "openclaw", "huggingface", "dataset", "conversations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Archiving",
]
dependencies = [
    "huggingface_hub>=0.35.0",
    "orjson>=3.0.0",
    "pyahocorasick>=2.3.0",
    "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/peteromallet/dataclaw"
Repository = "https://github.com/peteromallet/dataclaw"
Issues = "https://github.com/peteromallet/dataclaw/issues"

[project.scripts]
dataclaw = "dataclaw.cli:main"

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "ruff"]
build = ["pyinstaller>=6.10", "keyring>=25", "secretstorage>=3.3; sys_platform == 'linux'"]
# Optional model-based PII filter (power-user / first-run model download).
# Deliberately NOT a core dep and NOT bundled in the Mac sidecar by default.
pii = ["transformers>=4.57", "torch>=2.3", "accelerate", "tokenizers"]

[tool.pytest.ini_options]
markers = [
    "pii: tests that require the optional model PII stack (transformers/torch); skipped when absent",
]

[tool.ruff]
line-length = 120

[tool.setuptools.packages.find]
include = ["dataclaw*"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
